--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a4-trying-something",
+  "name": "cs4241e25-final-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.2",
+    "@mui/x-data-grid": "^8.5.3",
+    "@tailwindcss/vite": "^4.1.10",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "dotenv": "^16.5.0",
@@ -17,6 +22,7 @@
     "mongodb": "^6.17.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.10",
     "vite-express": "^0.21.1"
   },
   "devDependencies": {
@@ -28,6 +34,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
-    "vite": "^7.0.0"
+    "vite": "^6.2.3 || ^7.0.0"
   }
 }
