--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.2",
+    "@mui/x-charts": "^8.6.0",
     "@mui/x-data-grid": "^8.5.3",
     "@tailwindcss/vite": "^4.1.10",
     "cookie-parser": "^1.4.7",
